[package]
name = "esp32c3_PROJECT1"
version = "0.1.0"
authors = ["kitili"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "my_binary"
path = "src/main.rs"



[dependencies]
hal = { package = "esp32c3-hal", version = "0.9.0" }
esp-backtrace = { version = "0.7.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "print-uart",
] }
esp-println = { version = "0.5.0", features = ["esp32c3"] }

